feat: add consistent navigation bar to all pages

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
   <!-- Grain overlay -->
   <div class="grain-overlay"></div>
 
+  <!-- Navigation -->
+  <nav id="results-nav">
+    <a href="index.html" class="nav-link">
+      Home
+    </a>
+    <a href="game.html" class="nav-link">
+      Play Game
+    </a>
+    <a href="results.html" class="nav-link">
+      Results
+    </a>
+  </nav>
+
   <!-- Landing Hero -->
   <section id="landing-hero">
     <div class="hero-content">
