--- a/game.html
+++ b/game.html
@@ -75,6 +75,19 @@
   <!-- Grain overlay -->
   <div class="grain-overlay"></div>
 
+  <!-- Navigation -->
+  <nav id="results-nav">
+    <a href="index.html" class="nav-link">
+      Home
+    </a>
+    <a href="game.html" class="nav-link">
+      Play Game
+    </a>
+    <a href="results.html" class="nav-link">
+      Results
+    </a>
+  </nav>
+
   <!-- Setup Screen -->
   <div id="setup-screen">
     <!-- Mode Selection -->
