--- a/results.html
+++ b/results.html
@@ -50,13 +50,13 @@
   <!-- Navigation -->
   <nav id="results-nav">
     <a href="index.html" class="nav-link">
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-        <path d="M19 12H5M12 19l-7-7 7-7"/>
-      </svg>
       Home
     </a>
     <a href="game.html" class="nav-link">
       Play Game
+    </a>
+    <a href="results.html" class="nav-link">
+      Results
     </a>
   </nav>
 
