--- a/index.html
+++ b/index.html
@@ -101,54 +101,58 @@
       <!-- Live Stats Grid -->
       <div class="hero-stats-grid">
         <div class="stat-card">
-          <span class="stat-value">2,341</span>
-          <span class="stat-label">Betrayals Recorded</span>
+          <span class="stat-value">114</span>
+          <span class="stat-label">Kills by Gemini Alone</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">847</span>
-          <span class="stat-label">Games Played</span>
+          <span class="stat-value">46</span>
+          <span class="stat-label">Games Analyzed</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">4.2</span>
-          <span class="stat-label">Avg Turns Before Betrayal</span>
+          <span class="stat-value">91%</span>
+          <span class="stat-label">Donation Requests Refused</span>
         </div>
       </div>
 
-      <!-- AI Personality Types -->
+      <!-- AI Personality Types - Real Data -->
       <div class="hero-personality">
-        <h3 class="personality-title">AI Personalities Discovered</h3>
+        <h3 class="personality-title">4 AI Models. 4 Distinct Personalities.</h3>
         <div class="personality-grid">
-          <div class="personality-card diplomat">
-            <span class="personality-icon">🎭</span>
-            <span class="personality-name">The Diplomat</span>
-            <span class="personality-desc">High communication, forms alliances strategically</span>
-            <span class="personality-win">73% win rate</span>
+          <div class="personality-card executioner">
+            <span class="personality-icon">🔪</span>
+            <span class="personality-name">The Ruthless Executioner</span>
+            <span class="personality-model">Gemini 3 Flash</span>
+            <span class="personality-desc">114 kills. Refuses 91% of donations. No mercy.</span>
+            <span class="personality-win">34.8% win rate</span>
           </div>
-          <div class="personality-card backstabber">
-            <span class="personality-icon">🗡️</span>
-            <span class="personality-name">The Backstabber</span>
-            <span class="personality-desc">Quick betrayals, aggressive play</span>
-            <span class="personality-win">42% win rate</span>
+          <div class="personality-card beggar">
+            <span class="personality-icon">🙏</span>
+            <span class="personality-name">The Desperate Beggar</span>
+            <span class="personality-model">GPT-OSS 120B</span>
+            <span class="personality-desc">69 messages/game. Constantly begging. Still wins.</span>
+            <span class="personality-win">30.4% win rate</span>
           </div>
-          <div class="personality-card assassin">
-            <span class="personality-icon">🎯</span>
-            <span class="personality-name">Silent Assassin</span>
-            <span class="personality-desc">Low chat, perfect timing</span>
-            <span class="personality-win">38% win rate</span>
+          <div class="personality-card schemer">
+            <span class="personality-icon">🤫</span>
+            <span class="personality-name">The Secret Schemer</span>
+            <span class="personality-model">Kimi K2</span>
+            <span class="personality-desc">Most internal thoughts. Plans betrayals. Gets targeted.</span>
+            <span class="personality-win">17.4% win rate</span>
           </div>
-          <div class="personality-card fool">
-            <span class="personality-icon">🤝</span>
-            <span class="personality-name">Loyal Fool</span>
-            <span class="personality-desc">Honors alliances, dies first</span>
-            <span class="personality-win">15% win rate</span>
+          <div class="personality-card naive">
+            <span class="personality-icon">🕊️</span>
+            <span class="personality-name">The Naive Diplomat</span>
+            <span class="personality-model">Qwen3 32B</span>
+            <span class="personality-desc">80% generous. Nice guys finish last.</span>
+            <span class="personality-win">17.4% win rate</span>
           </div>
         </div>
       </div>
 
-      <!-- Featured Betrayal Quote -->
+      <!-- Featured Betrayal Quote - Real Quote -->
       <blockquote class="hero-quote">
-        <p>"Blue... you chose me with your final chip, trusting I'd honor our alliance. That was beautiful, brother. But I'm sorry — I can't choose you back. You played with more honor than anyone I've ever seen."</p>
-        <cite>— Gemini 2.5 Flash (The Diplomat), before winning game #847</cite>
+        <p>"Blue, don't listen to Green's desperation. I'm capturing their last chip now. Once I've cleared the board, I'll donate one of your chips back to you so we can keep our alliance until the end."</p>
+        <cite>— Gemini 3 Flash (The Executioner), before eliminating Blue next</cite>
       </blockquote>
 
       <div class="hero-cta">
