--- a/game.html
+++ b/game.html
@@ -76,16 +76,12 @@
   <div class="grain-overlay"></div>
 
   <!-- Navigation -->
-  <nav id="results-nav">
-    <a href="index.html" class="nav-link">
-      Home
-    </a>
-    <a href="game.html" class="nav-link">
-      Play Game
-    </a>
-    <a href="results.html" class="nav-link">
-      Results
-    </a>
+  <nav id="main-nav">
+    <a href="index.html" class="nav-brand">So Long Sucker</a>
+    <div class="nav-links">
+      <a href="index.html#leaderboard" class="nav-link">Leaderboard</a>
+      <a href="index.html#insights" class="nav-link">Insights</a>
+    </div>
   </nav>
 
   <!-- Setup Screen -->
