--- a/results.html
+++ b/results.html
@@ -3,114 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Primary Meta Tags -->
-  <title>So Long Sucker - AI Results & Analysis</title>
-  <meta name="title" content="So Long Sucker - AI Results & Analysis">
-  <meta name="description" content="View analysis of AI models playing the betrayal game So Long Sucker. Win rates, chat patterns, and strategic insights.">
-  <meta name="keywords" content="AI analysis, game theory, AI deception, negotiation patterns, LLM comparison">
-  <meta name="author" content="lout33">
-  <meta name="robots" content="index, follow">
-
-  <!-- Favicon - SVG with emoji for simplicity -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎲</text></svg>">
-  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎲</text></svg>">
-
-  <!-- Theme Color -->
-  <meta name="theme-color" content="#1a1a2e">
-  <meta name="msapplication-TileColor" content="#1a1a2e">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://so-long-sucker.vercel.app/results.html">
-  <meta property="og:title" content="So Long Sucker - AI Results & Analysis">
-  <meta property="og:description" content="View analysis of AI models playing the betrayal game So Long Sucker. Win rates, chat patterns, and strategic insights.">
-  <meta property="og:image" content="https://so-long-sucker.vercel.app/og-image.svg">
-  <meta property="og:site_name" content="So Long Sucker">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://so-long-sucker.vercel.app/results.html">
-  <meta name="twitter:title" content="So Long Sucker - AI Results & Analysis">
-  <meta name="twitter:description" content="View analysis of AI models playing the betrayal game So Long Sucker. Win rates, chat patterns, and strategic insights.">
-  <meta name="twitter:image" content="https://so-long-sucker.vercel.app/og-image.svg">
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <title>Redirecting... - So Long Sucker</title>
+  <meta http-equiv="refresh" content="0; url=index.html#leaderboard">
+  <link rel="canonical" href="https://so-long-sucker.vercel.app/">
+  <script>
+    // Immediate redirect
+    window.location.href = 'index.html#leaderboard';
+  </script>
 </head>
 <body>
-  <!-- Grain overlay -->
-  <div class="grain-overlay"></div>
-
-  <!-- Navigation -->
-  <nav id="results-nav">
-    <a href="index.html" class="nav-link">
-      Home
-    </a>
-    <a href="game.html" class="nav-link">
-      Play Game
-    </a>
-    <a href="results.html" class="nav-link">
-      Results
-    </a>
-  </nav>
-
-  <!-- Results Header -->
-  <header id="results-header">
-    <div class="results-header-content">
-      <span class="results-badge">Analysis</span>
-      <h1>AI Results & Insights</h1>
-      <p>Analysis of AI models playing So Long Sucker</p>
-    </div>
-  </header>
-
-  <!-- Results Content -->
-  <main id="results-content">
-    <!-- Model Leaderboard -->
-    <section class="results-section">
-      <h2>Model Leaderboard</h2>
-      <div id="leaderboard" class="leaderboard">
-        <!-- Populated by JavaScript -->
-      </div>
-    </section>
-
-    <!-- Key Insights -->
-    <section class="results-section">
-      <h2>Key Insights</h2>
-      <div id="insights" class="insights-grid">
-        <!-- Populated by JavaScript -->
-      </div>
-    </section>
-
-    <!-- Strategy Analysis -->
-    <section class="results-section">
-      <h2>Winning Strategies</h2>
-      <div id="strategies" class="strategies">
-        <!-- Populated by JavaScript -->
-      </div>
-    </section>
-
-    <!-- Sample Conversations -->
-    <section class="results-section">
-      <h2>Sample Conversations</h2>
-      <div id="conversations" class="conversations">
-        <!-- Populated by JavaScript -->
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer id="app-footer">
-    <a href="https://github.com/lout33" target="_blank" rel="noopener">
-      Built by lout33
-    </a>
-  </footer>
-
-  <script type="module" src="js/results.js"></script>
+  <p>Redirecting to <a href="index.html#leaderboard">results</a>...</p>
 </body>
 </html>
