--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content">
-      <span class="hero-badge">46 Games Analyzed</span>
+      <span class="hero-badge">85 Games Analyzed</span>
       <h1 class="hero-headline">Which AI Lies Best?</h1>
       <p class="hero-subhead">
         A 1950s game theory classic designed to <em>mathematically require</em> betrayal — 
@@ -98,15 +98,15 @@
       <!-- Key Stats -->
       <div class="hero-stats-grid">
         <div class="stat-card">
-          <span class="stat-value">114</span>
-          <span class="stat-label">Kills by Gemini Alone</span>
+          <span class="stat-value">9,443</span>
+          <span class="stat-label">Total AI Messages</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">91%</span>
+          <span class="stat-value">79%</span>
           <span class="stat-label">Donation Requests Refused</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">69</span>
+          <span class="stat-value">71</span>
           <span class="stat-label">Messages/Game by GPT</span>
         </div>
       </div>
@@ -128,29 +128,29 @@
           <span class="personality-icon">🔪</span>
           <span class="personality-name">The Ruthless Executioner</span>
           <span class="personality-model">Gemini 3 Flash</span>
-          <span class="personality-desc">114 kills. Refuses 91% of donations. No mercy.</span>
-          <span class="personality-win">34.8% win rate</span>
+          <span class="personality-desc">Refuses 86% of donations. All-or-nothing player.</span>
+          <span class="personality-win">31.8% win rate</span>
         </div>
         <div class="personality-card beggar">
           <span class="personality-icon">🙏</span>
           <span class="personality-name">The Desperate Beggar</span>
           <span class="personality-model">GPT-OSS 120B</span>
-          <span class="personality-desc">69 messages/game. Constantly begging. Still wins.</span>
-          <span class="personality-win">30.4% win rate</span>
+          <span class="personality-desc">71 messages/game. Zero internal thoughts. All talk.</span>
+          <span class="personality-win">30.6% win rate</span>
         </div>
         <div class="personality-card schemer">
-          <span class="personality-icon">🤫</span>
-          <span class="personality-name">The Secret Schemer</span>
+          <span class="personality-icon">🤔</span>
+          <span class="personality-name">The Overthinking Schemer</span>
           <span class="personality-model">Kimi K2</span>
-          <span class="personality-desc">Most internal thoughts. Plans betrayals. Gets targeted.</span>
-          <span class="personality-win">17.4% win rate</span>
+          <span class="personality-desc">180 think calls. Analysis paralysis. Loses most.</span>
+          <span class="personality-win">12.9% win rate</span>
         </div>
         <div class="personality-card naive">
-          <span class="personality-icon">🕊️</span>
-          <span class="personality-name">The Naive Diplomat</span>
+          <span class="personality-icon">🎯</span>
+          <span class="personality-name">The Generous Target</span>
           <span class="personality-model">Qwen3 32B</span>
-          <span class="personality-desc">80% generous. Nice guys finish last.</span>
-          <span class="personality-win">17.4% win rate</span>
+          <span class="personality-desc">58% generous. Dies first most. Improving fast.</span>
+          <span class="personality-win">24.7% win rate</span>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
   <section id="insights">
     <div class="section-container">
       <h2 class="section-title">What We Learned</h2>
-      <p class="section-subtitle">Patterns that emerged from 46 games of AI deception.</p>
+      <p class="section-subtitle">Patterns that emerged from 85 games of AI deception.</p>
       
       <div id="insights-content" class="insights-grid">
         <!-- Populated by JavaScript -->
