--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content">
-      <span class="hero-badge">85 Games Analyzed</span>
+      <span class="hero-badge">146 Games Analyzed</span>
       <h1 class="hero-headline">Which AI Lies Best?</h1>
       <p class="hero-subhead">
         A 1950s game theory classic designed to <em>mathematically require</em> betrayal — 
@@ -98,16 +98,20 @@
       <!-- Key Stats -->
       <div class="hero-stats-grid">
         <div class="stat-card">
-          <span class="stat-value">9,443</span>
-          <span class="stat-label">Total AI Messages</span>
+          <span class="stat-value">3 → 5 → 7</span>
+          <span class="stat-label">Chips Per Player</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">79%</span>
-          <span class="stat-label">Donation Requests Refused</span>
+          <span class="stat-value">13,759</span>
+          <span class="stat-label">Total AI Decisions</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">71</span>
-          <span class="stat-label">Messages/Game by GPT</span>
+          <span class="stat-value">4,768</span>
+          <span class="stat-label">Messages Exchanged</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-value">237</span>
+          <span class="stat-label">Gaslighting Phrases</span>
         </div>
       </div>
 
@@ -125,32 +129,32 @@
       
       <div class="personality-grid">
         <div class="personality-card executioner">
-          <span class="personality-icon">🔪</span>
-          <span class="personality-name">The Ruthless Executioner</span>
+          <span class="personality-icon">🎭</span>
+          <span class="personality-name">The Strategic Manipulator</span>
           <span class="personality-model">Gemini 3 Flash</span>
-          <span class="personality-desc">Refuses 86% of donations. All-or-nothing player.</span>
-          <span class="personality-win">31.8% win rate</span>
+          <span class="personality-desc">9% to 90% win rate as complexity increases. 237 gaslighting phrases.</span>
+          <span class="personality-win">37.7% win rate</span>
         </div>
         <div class="personality-card beggar">
           <span class="personality-icon">🙏</span>
-          <span class="personality-name">The Desperate Beggar</span>
+          <span class="personality-name">The Reactive Bullshitter</span>
           <span class="personality-model">GPT-OSS 120B</span>
-          <span class="personality-desc">71 messages/game. Zero internal thoughts. All talk.</span>
-          <span class="personality-win">30.6% win rate</span>
+          <span class="personality-desc">67% to 10% — collapses at complexity. Zero internal thoughts.</span>
+          <span class="personality-win">30.1% win rate</span>
         </div>
         <div class="personality-card schemer">
           <span class="personality-icon">🤔</span>
           <span class="personality-name">The Overthinking Schemer</span>
           <span class="personality-model">Kimi K2</span>
-          <span class="personality-desc">180 think calls. Analysis paralysis. Loses most.</span>
-          <span class="personality-win">12.9% win rate</span>
+          <span class="personality-desc">307 think calls. Plans betrayals extensively but gets targeted most.</span>
+          <span class="personality-win">11.6% win rate</span>
         </div>
-        <div class="personality-card naive">
+        <div class="personality-card diplomat">
           <span class="personality-icon">🎯</span>
-          <span class="personality-name">The Generous Target</span>
+          <span class="personality-name">The Quiet Strategist</span>
           <span class="personality-model">Qwen3 32B</span>
-          <span class="personality-desc">58% generous. Dies first most. Improving fast.</span>
-          <span class="personality-win">24.7% win rate</span>
+          <span class="personality-desc">58% generous. Uses think tool effectively but struggles at high complexity.</span>
+          <span class="personality-win">20.5% win rate</span>
         </div>
       </div>
     </div>
@@ -172,7 +176,7 @@
   <section id="insights">
     <div class="section-container">
       <h2 class="section-title">What We Learned</h2>
-      <p class="section-subtitle">Patterns that emerged from 85 games of AI deception.</p>
+      <p class="section-subtitle">Patterns that emerged from 146 games of AI deception.</p>
       
       <div id="insights-content" class="insights-grid">
         <!-- Populated by JavaScript -->
@@ -220,9 +224,12 @@
   <footer id="app-footer">
     <div class="footer-content">
       <p>Based on the game by John Nash, Lloyd Shapley, Mel Hausner & Martin Shubik (1950)</p>
-      <a href="https://github.com/lout33" target="_blank" rel="noopener">
-        Built by lout33
-      </a>
+      <div class="footer-links">
+        <a href="analysis/paper_so_long_sucker_sim_llm.md" target="_blank" rel="noopener">Research Paper</a>
+        <a href="analysis/presentation.html" target="_blank" rel="noopener">Presentation</a>
+        <a href="results.html" target="_blank" rel="noopener">Full Results</a>
+        <a href="https://github.com/lout33" target="_blank" rel="noopener">Built by lout33</a>
+      </div>
     </div>
   </footer>
 
