--- a/game.html
+++ b/game.html
@@ -95,7 +95,8 @@
           <p>Human vs AI mix<br>Interactive play</p>
           <button class="btn btn-primary btn-mode">Start Setup</button>
         </div>
-        <div class="mode-card" id="mode-simulate">
+        <!-- Simulation mode hidden - use CLI for AI vs AI simulations (npm run simulate) -->
+        <div class="mode-card" id="mode-simulate" style="display: none;">
           <div class="mode-icon">&#128300;</div>
           <h3>Simulation Mode</h3>
           <p>Watch AI vs AI games<br>Collect statistics</p>
