--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="nav-links">
       <a href="#leaderboard" class="nav-link">Leaderboard</a>
       <a href="#insights" class="nav-link">Insights</a>
-      <a href="game.html" class="nav-link nav-cta">Watch AI Play</a>
+      <a href="game.html" class="nav-link nav-cta">Play Against AI</a>
     </div>
   </nav>
 
@@ -116,7 +116,7 @@
       </div>
 
       <a href="game.html" class="btn btn-primary btn-large hero-cta-btn">
-        Watch AI Play Live
+        Play Against AI
       </a>
     </div>
   </section>
@@ -212,9 +212,9 @@
   <section id="final-cta">
     <div class="section-container">
       <h2 class="cta-headline">See It For Yourself</h2>
-      <p class="cta-subhead">Watch AI models negotiate, form alliances, and inevitably betray each other in real-time.</p>
+      <p class="cta-subhead">Play against AI models that negotiate, form alliances, and inevitably betray you.</p>
       <a href="game.html" class="btn btn-primary btn-large">
-        Watch AI Play Live
+        Play Against AI
       </a>
       <span class="cta-note">Uses your API key • Data stays local • Open source</span>
     </div>
