--- a/game.html
+++ b/game.html
@@ -118,6 +118,11 @@
                 <option value="human">Human</option>
                 <option value="ai">AI</option>
               </select>
+              <select id="player-0-model" class="player-model-select hidden">
+                <option value="moonshotai/kimi-k2-instruct-0905" selected>Kimi K2</option>
+                <option value="llama-3.3-70b-versatile">Llama 3.3 70B</option>
+                <option value="qwen/qwen3-32b">Qwen 3 32B</option>
+              </select>
             </div>
             <div class="player-setup-card" data-color="blue">
               <div class="player-chip-display blue"></div>
@@ -125,6 +130,11 @@
               <select id="player-1-type" class="player-type-select">
                 <option value="human">Human</option>
                 <option value="ai" selected>AI</option>
+              </select>
+              <select id="player-1-model" class="player-model-select">
+                <option value="moonshotai/kimi-k2-instruct-0905" selected>Kimi K2</option>
+                <option value="llama-3.3-70b-versatile">Llama 3.3 70B</option>
+                <option value="qwen/qwen3-32b">Qwen 3 32B</option>
               </select>
             </div>
             <div class="player-setup-card" data-color="green">
@@ -134,6 +144,11 @@
                 <option value="human">Human</option>
                 <option value="ai" selected>AI</option>
               </select>
+              <select id="player-2-model" class="player-model-select">
+                <option value="moonshotai/kimi-k2-instruct-0905" selected>Kimi K2</option>
+                <option value="llama-3.3-70b-versatile">Llama 3.3 70B</option>
+                <option value="qwen/qwen3-32b">Qwen 3 32B</option>
+              </select>
             </div>
             <div class="player-setup-card" data-color="yellow">
               <div class="player-chip-display yellow"></div>
@@ -141,6 +156,11 @@
               <select id="player-3-type" class="player-type-select">
                 <option value="human">Human</option>
                 <option value="ai" selected>AI</option>
+              </select>
+              <select id="player-3-model" class="player-model-select">
+                <option value="moonshotai/kimi-k2-instruct-0905" selected>Kimi K2</option>
+                <option value="llama-3.3-70b-versatile">Llama 3.3 70B</option>
+                <option value="qwen/qwen3-32b">Qwen 3 32B</option>
               </select>
             </div>
           </div>
@@ -169,30 +189,17 @@
         <div class="setup-section" id="ai-config">
           <h2><span class="section-number">03</span>AI Configuration</h2>
           <div class="config-grid">
-            <div class="config-field">
-              <label>Provider</label>
-              <select id="ai-provider">
-                <option value="groq:llama-3.3-70b-versatile" selected>Groq - Llama 3.3 70B</option>
-                <option value="groq:moonshotai/kimi-k2-instruct-0905">Groq - Kimi K2</option>
-                <option value="openai">OpenAI (GPT-4o-mini)</option>
-                <option value="claude">Claude (Sonnet)</option>
-                <option value="azure-claude">Azure Claude (Opus)</option>
-              </select>
-            </div>
-            <div class="config-field">
-              <label>API Key</label>
-              <input type="password" id="api-key" placeholder="Enter your API key">
-            </div>
-            <div class="config-field" id="azure-resource-row">
-              <label>Azure Resource</label>
-              <input type="text" id="azure-resource" placeholder="Azure resource name">
+            <div class="config-field" style="grid-column: 1 / -1;">
+              <label>Groq API Key</label>
+              <input type="password" id="api-key" placeholder="Enter your Groq API key">
             </div>
           </div>
           <div class="api-test-row">
             <button id="test-api-btn" class="btn btn-outline">Test Connection</button>
             <span id="test-result" class="test-result"></span>
           </div>
-          <p class="api-note">Your credentials are stored locally and never leave your browser.</p>
+          <p class="api-note">Your API key is stored locally and never leaves your browser. All models run on <a href="https://console.groq.com" target="_blank" rel="noopener">Groq</a> (free tier available).</p>
+          <p class="api-note api-note-open-source">This project is open source. You can add more providers by editing the code on <a href="https://github.com/lout33/so-long-sucker" target="_blank" rel="noopener">GitHub</a>.</p>
         </div>
 
         <div class="setup-footer">
@@ -295,7 +302,6 @@
         <div id="piles-area">
           <div class="section-header">
             <h2>The Table</h2>
-            <button id="new-pile-btn" class="btn btn-small" disabled>+ New Pile</button>
           </div>
           <div id="piles-container"></div>
         </div>
