--- a/analysis/presentation.html
+++ b/analysis/presentation.html
@@ -1332,8 +1332,8 @@
 
   <!-- Navigation -->
   <div class="nav">
-    <button class="nav-btn" onclick="prevSlide()">< PREV</button>
-    <button class="nav-btn" onclick="nextSlide()">NEXT ></button>
+    <button class="nav-btn" onclick="prevSlide()">&larr; PREV</button>
+    <button class="nav-btn" onclick="nextSlide()">NEXT &rarr;</button>
   </div>
 
   <!-- QR Code Library -->
