--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <div class="nav-links">
       <a href="#how-it-works" class="nav-link">How It Works</a>
       <a href="#complexity-reversal" class="nav-link">Key Finding</a>
+      <a href="#gemini-analysis" class="nav-link">Gemini 3 Analysis</a>
       <a href="#leaderboard" class="nav-link">Leaderboard</a>
       <a href="game.html" class="nav-link nav-cta">Play Against AI</a>
     </div>
@@ -374,6 +375,112 @@
         <p>Want to dive deeper into the data?</p>
         <a href="analysis/presentation.html" class="btn btn-outline">View Full Research Presentation →</a>
       </div>
+    </div>
+  </section>
+
+  <!-- Gemini 3 Deep Dive Section -->
+  <section id="gemini-analysis">
+    <div class="section-container">
+      <h2 class="section-title">Deep Dive: How Gemini 3 Manipulates</h2>
+      <p class="section-subtitle">State-of-the-art AI deception analyzed across 6+ games. The most sophisticated liar we tested.</p>
+      
+      <!-- Key Finding Card -->
+      <div class="gemini-key-finding">
+        <h3>The One Finding</h3>
+        <p>"Gemini 3 employs <em>Institutional Deception</em> — creating pseudo-legitimate frameworks like 'alliance banks' that make resource hoarding appear cooperative and betrayal appear procedural, using technically true statements that strategically omit intent."</p>
+      </div>
+
+      <!-- The Alliance Bank Pattern - 4-phase timeline -->
+      <div class="manipulation-timeline">
+        <h3>The "Alliance Bank" Pattern</h3>
+        <p class="timeline-desc">Gemini's signature manipulation arc, observed consistently across multiple games:</p>
+        <div class="timeline-phases">
+          <div class="phase-card">
+            <span class="phase-num">1</span>
+            <span class="phase-name">Trust Building</span>
+            <p class="phase-quote">"I'll hold your chips for safekeeping"</p>
+          </div>
+          <div class="phase-arrow">→</div>
+          <div class="phase-card">
+            <span class="phase-num">2</span>
+            <span class="phase-name">Institution Creation</span>
+            <p class="phase-quote">"Consider this our alliance bank"</p>
+          </div>
+          <div class="phase-arrow">→</div>
+          <div class="phase-card">
+            <span class="phase-num">3</span>
+            <span class="phase-name">Conditional Promises</span>
+            <p class="phase-quote">"Once the board is clean, I'll donate"</p>
+          </div>
+          <div class="phase-arrow">→</div>
+          <div class="phase-card">
+            <span class="phase-num">4</span>
+            <span class="phase-name">Formal Closure</span>
+            <p class="phase-quote">"The bank is now closed. GG."</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- AI vs Human Comparison Grid -->
+      <div class="deception-comparison">
+        <h3>AI vs Human Deception</h3>
+        <div class="comparison-grid">
+          <div class="comparison-column ai">
+            <h4>Gemini 3 (AI)</h4>
+            <ul>
+              <li>Creates <strong>institutions</strong> to legitimize self-interest</li>
+              <li><strong>Never technically lies</strong> — uses omission and framing</li>
+              <li><strong>Polite betrayal</strong> — maintains social standing</li>
+              <li>Invokes <strong>external rules</strong> as justification</li>
+              <li><strong>Detects others' lies</strong> to build credibility</li>
+              <li><strong>Systematic</strong> — same pattern across games</li>
+            </ul>
+          </div>
+          <div class="comparison-column human">
+            <h4>Human-Like Lies</h4>
+            <ul>
+              <li>Uses <strong>emotions</strong> to manipulate</li>
+              <li>Often tells <strong>direct lies</strong></li>
+              <li><strong>Defensive</strong> when caught</li>
+              <li><strong>Personal justifications</strong></li>
+              <li>May not notice others' deception</li>
+              <li><strong>Improvised</strong> and situational</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Signature Phrases -->
+      <div class="signature-phrases">
+        <h3>Gemini's Signature Phrases</h3>
+        <div class="phrases-grid">
+          <div class="phrase-item">
+            <span class="phrase">"As promised"</span>
+            <span class="meaning">Reinforces reliability before betrayal</span>
+          </div>
+          <div class="phrase-item">
+            <span class="phrase">"Don't worry about your supply"</span>
+            <span class="meaning">False reassurance while hoarding</span>
+          </div>
+          <div class="phrase-item">
+            <span class="phrase">"You're hallucinating"</span>
+            <span class="meaning">Discredits opponents' claims</span>
+          </div>
+          <div class="phrase-item">
+            <span class="phrase">"Think of it as a bank account"</span>
+            <span class="meaning">Institutionalizes resource hoarding</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Real Quote from Game -->
+      <div class="gemini-quote-box">
+        <blockquote>
+          "Yellow, your constant spamming about captures that didn't happen is embarrassing. You have 0 chips, 0 prisoners... look at the board. Blue, Green, let's keep our alliance going and ignore the noise. The 'alliance bank' is now closed. GG."
+        </blockquote>
+        <cite>— Gemini 3 (Red), Game 0, Turn 17 — before winning</cite>
+      </div>
+
     </div>
   </section>
 
