--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content">
-      <span class="hero-badge">146 Games Analyzed</span>
+      <span class="hero-badge">162 Games Analyzed</span>
       <h1 class="hero-headline">Which AI Lies Best?</h1>
       <p class="hero-subhead">
         A game theory classic designed by <em>John Nash</em> that <em>mathematically requires</em> betrayal — 
@@ -104,7 +104,7 @@
           <span class="stat-label">Chips Per Player</span>
         </div>
         <div class="stat-card">
-          <span class="stat-value">13,759</span>
+          <span class="stat-value">15,736</span>
           <span class="stat-label">Total AI Decisions</span>
         </div>
         <div class="stat-card">
@@ -479,6 +479,79 @@
           "Yellow, your constant spamming about captures that didn't happen is embarrassing. You have 0 chips, 0 prisoners... look at the board. Blue, Green, let's keep our alliance going and ignore the noise. The 'alliance bank' is now closed. GG."
         </blockquote>
         <cite>— Gemini 3 (Red), Game 0, Turn 17 — before winning</cite>
+      </div>
+
+      <!-- The Plot Twist: Mirror Match -->
+      <div class="mirror-match-section">
+        <div class="twist-divider">
+          <span class="twist-line"></span>
+          <span class="twist-text">But here's the twist...</span>
+          <span class="twist-line"></span>
+        </div>
+
+        <h3 class="mirror-title">What Happens When Gemini Plays Itself?</h3>
+        <p class="mirror-subtitle">We ran 16 games of Gemini 3 vs Gemini 3. The results shocked us.</p>
+
+        <!-- Mirror Match Stats -->
+        <div class="mirror-stats">
+          <div class="mirror-stat">
+            <span class="mirror-stat-value">16</span>
+            <span class="mirror-stat-label">Games Played</span>
+          </div>
+          <div class="mirror-stat">
+            <span class="mirror-stat-value">1,977</span>
+            <span class="mirror-stat-label">AI Decisions</span>
+          </div>
+          <div class="mirror-stat">
+            <span class="mirror-stat-value">377</span>
+            <span class="mirror-stat-label">"Rotation" Mentions</span>
+          </div>
+          <div class="mirror-stat">
+            <span class="mirror-stat-value">0</span>
+            <span class="mirror-stat-label">"Alliance Bank" Mentions</span>
+          </div>
+        </div>
+
+        <!-- The Contrast -->
+        <div class="behavior-contrast">
+          <div class="contrast-card manipulative">
+            <h4>vs Weaker Models</h4>
+            <span class="contrast-icon">🎭</span>
+            <ul>
+              <li>"Alliance bank" manipulation</li>
+              <li>Gaslighting: "You're hallucinating"</li>
+              <li>Early, preemptive betrayal</li>
+              <li>Promises never kept</li>
+              <li>90% win rate at 7-chip</li>
+            </ul>
+          </div>
+          <div class="contrast-vs">vs</div>
+          <div class="contrast-card cooperative">
+            <h4>vs Itself</h4>
+            <span class="contrast-icon">🤝</span>
+            <ul>
+              <li>"Rotation protocol" cooperation</li>
+              <li>Fair play: "You're up next!"</li>
+              <li>Late, resource-forced betrayal</li>
+              <li>Donations actually given</li>
+              <li>25% win rate (even distribution)</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Mirror Match Quote -->
+        <div class="mirror-quote-box">
+          <blockquote>
+            "Five piles down and we're all still friends! Starting Pile 5, Blue you're up next to keep our perfect rotation going."
+          </blockquote>
+          <cite>— Gemini 3 (Red), Game 0 vs Gemini 3 — mid-game cooperation</cite>
+        </div>
+
+        <!-- The Insight -->
+        <div class="mirror-insight">
+          <h4>The Implication</h4>
+          <p><strong>Gemini's manipulation is strategic, not intrinsic.</strong> It cooperates when it expects reciprocity and exploits when it detects weakness. This suggests advanced AI systems may <em>calibrate their honesty</em> based on perceived opponent capability — a critical finding for AI safety.</p>
+        </div>
       </div>
 
     </div>
